forgot to put something besides hello world in the main page

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <!-- <script src="index.js"></script> -->
 </head>
 <body>
-  Hello World!
+  Hello. This is a usage stats server for Smogon data. Please don't hammer it, I'm paying out of pocket. I will work on some way to allow cloning of the data, for local use and then you can connect back to it after it's ready. Or if you want the repo for the database and the web-scraping is here: https://github.com/Stu-Gotz/smog_usage_stats feel free to make your own copy in postgres. You'll have to set it up yourself but if you don't know basic DB stuff, and want to be a better programmer it's a good skill to have to at least be able to bullshit confidently. I will also put some CSS here but I'm not too fussed.
 </body>
 </html>
