--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,23 @@
   <!-- <script src="index.js"></script> -->
 </head>
 <body>
-  Hello. This is a usage stats server for Smogon data. Please don't hammer it, I'm paying out of pocket. I will work on some way to allow cloning of the data, for local use and then you can connect back to it after it's ready. Or if you want the repo for the database and the web-scraping is here: https://github.com/Stu-Gotz/smog_usage_stats feel free to make your own copy in postgres. You'll have to set it up yourself but if you don't know basic DB stuff, and want to be a better programmer it's a good skill to have to at least be able to bullshit confidently. I will also put some CSS here but I'm not too fussed.
+  <div class="greeting">
+    <div class="text">
+      Hello. This is a usage stats server for Smogon data. 
+      Please don't hammer it, I'm paying out of pocket. 
+      I will work on some way to allow cloning of the data. 
+      For now, please use the repo for the 
+      database and the web-scraping   
+      <a href="https://github.com/Stu-Gotz/smog_usage_stats">here</a> 
+      you should hopefully just have to press run twice in the
+      two Python files (<code>DBManager.py</code> and <code>smogon_pull.py</code>).
+      You'll have to set it up yourself but if you don't 
+      know basic DB stuff, and want to be a better programmer 
+      it's a good skill to have to at least be able to 
+      bullshit confidently. 
+      <br>
+      Have fun.
+    </div>
+  </div>
 </body>
 </html>
