some more css before i post

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Usage Stats</title>
   <!-- <script src="index.js"></script> -->
 </head>
 <body>
@@ -23,6 +23,13 @@
       know basic DB stuff, and want to be a better programmer 
       it's a good skill to have to at least be able to 
       bullshit confidently. 
+      <br>
+      <br>
+      To get started: it takes two parameters from the route /data/.
+      <code>date</code> is the date in <code>YYYY-MM</code> format and 
+      <code>tier</code> is the tier eg: <code>gen8ou</code>. 
+      <br>
+      <a href="https://usage-server.herokuapp.com/data/2019-05/gen7ou">Get started here.</a>
       <br>
       Have fun.
     </div>
