apparently now i am moving the image files

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="./index.html"><img class="header-image" src="../assets/images/pngegg.png" alt="koffing" height="150" width="150"></a>
+    <a href="./index.html"><img class="header-image" src="./images/pngegg.png" alt="koffing" height="150" width="150"></a>
   </header>
   <div class="greeting" id="main-text">
     <div class="text">
@@ -35,7 +35,6 @@
       <code>tier</code> is the tier eg: <code>gen8ou</code>. 
       <br>
       <br>
-      <form class="input" id="userForm">
         <ul>
           <li class="date">
             <label for="date">Date:</label>
@@ -50,7 +49,6 @@
             <button onclick="resetForm()" class="clear">Reset</button>
           </li>
         </ul>
-      </form>
       Have fun.
       </div>
     </div>
