--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Usage Stats</title>
+  <link rel="shortcut icon" href="./images/pngegg.png" type="image/x-icon">
   
   <!-- <script src="index.js"></script> -->
 </head>
