added to disclaimer. apparently made some changes to style.css before bed

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,10 @@
   <footer>Disclaimer: not in anyway officially or unofficially associated with 
     <a href="https://www.smogon.com">smogon.com</a>, 
     <a href="https://play.pokemonshowdown.com">Showdown</a> 
-    or any of their affiliates</footer>
+    or any of their affiliates.
+  <br>
+    Nor am I associated with Nintendo, GameFreak or the Pokemon brand in anyway. 
+    This is purely a labour of love. ❤</footer>
   
   <script src="main.js"></script>
 </body>
